--- a/02-01/index.html
+++ b/02-01/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Page</title>
     <link rel="stylesheet" href="./assets/style.css">
-    <!-- Feather icon -->
-    <script src="https://unpkg.com/feather-icons"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/d157dab1d8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
         <a href="" class="nav-logo"><span>Rizal</span>Hidayat</a>
         <div class="navbar-nav">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Portofolio</a>
-            <a href="">Blog</a>
-            <a href="">Kontak</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#service">Service</a>
+            <a href="#blog">Blog</a>
+            <a href="#contact">Kontak</a>
         </div>
     </nav>
     <!-- Section Hero -->
     <section class="hero" id="home">
         <main class="content">
             <h1>Hi, I am <span>Rizal</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, in.</p>
+            <p>A Frontend Developer based in Indonesia</p>
         </main>
     </section>
     <!-- About Section -->
@@ -47,19 +47,25 @@
         <h2>Service</h2>
         <div class="service-container">
             <div class="service-card">
-                <span><i data-feather="airplay"></i></span>
-                <h3>UI/UX Design</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptates sunt alias amet voluptas omnis debitis iste adipisci nesciunt. In iure enim doloremque tempore soluta!</p>
+                <img src="./assets/img/coding.png" alt="">
+                <div class="wrap">
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptates sunt alias amet voluptas omnis debitis iste adipisci nesciunt. In iure enim doloremque tempore soluta!</p>
+                </div>
             </div>
             <div class="service-card">
-                <span><i data-feather="airplay"></i></span>
-                <h3>UI/UX Design</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptates sunt alias amet voluptas omnis debitis iste adipisci nesciunt. In iure enim doloremque tempore soluta!</p>
+                <img src="./assets/img/coding.png" alt="">
+                <div class="wrap">
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptates sunt alias amet voluptas omnis debitis iste adipisci nesciunt. In iure enim doloremque tempore soluta!</p>
+                </div>
             </div>
             <div class="service-card">
-                <span><i data-feather="airplay"></i></span>
-                <h3>UI/UX Design</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptates sunt alias amet voluptas omnis debitis iste adipisci nesciunt. In iure enim doloremque tempore soluta!</p>
+                <img src="./assets/img/coding.png" alt="">
+                <div class="wrap">
+                    <h3>UI/UX Design</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt voluptates sunt alias amet voluptas omnis debitis iste adipisci nesciunt. In iure enim doloremque tempore soluta!</p>
+                </div>
             </div>
         </div>
     </section>
@@ -81,7 +87,7 @@
                     <img src="" alt=""/>
                 </div>
                 <div class="project-content">
-                    <h3>Sistem Informasi Tugas Akhir</h3>
+                    <h3>Win Herbal E-Shop</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae exercitationem error vel saepe asperiores modi deserunt autem aspernatur veritatis atque iure voluptatum, suscipit rerum commodi!</p>
                 </div>
             </div>
@@ -92,7 +98,7 @@
                     <img src="" alt=""/>
                 </div>
                 <div class="project-content">
-                    <h3>Sistem Informasi Tugas Akhir</h3>
+                    <h3>Lorem Ipsum Dolor Sit Amet</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae exercitationem error vel saepe asperiores modi deserunt autem aspernatur veritatis atque iure voluptatum, suscipit rerum commodi!</p>
                 </div>
             </div>
@@ -101,7 +107,7 @@
                     <img src="" alt=""/>
                 </div>
                 <div class="project-content">
-                    <h3>Sistem Informasi Tugas Akhir</h3>
+                    <h3>Lorem Ipsum Dolor Sit Amet</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae exercitationem error vel saepe asperiores modi deserunt autem aspernatur veritatis atque iure voluptatum, suscipit rerum commodi!</p>
                 </div>
             </div>
@@ -110,12 +116,106 @@
     <!-- Blog Section -->
     <section class="blog" id="blog">
         <h2>Blog</h2>
+        <div class="blog-container">
+            <div class="blog-card">
+                <div class="thumbnail">
+                    <a href="">
+                        <img src="./assets/img/img-thumbnail.jpg" alt="">
+                    </a>
+                </div>
+                <div class="content">
+                    <h3>
+                        <a href="">Ini Adalah Judul</a>
+                    </h3>
+                    <p class="blog-icon">
+                        <span><i class="fa-solid fa-user"></i>Rizal</span>
+                        <span><i class="fa-solid fa-calendar-days"></i>6 Januari 2023</span>
+                    </p>
+                    <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta doloremque odit, sunt modi error maiores. Consequatur voluptas cum impedit soluta tempora at quo non ratione. Voluptas quaerat quidem quasi deserunt!</p>
+                </div>
+            </div>
+            <div class="blog-card">
+                <div class="thumbnail">
+                    <a href="">
+                        <img src="./assets/img/img-thumbnail.jpg" alt="">
+                    </a>
+                </div>
+                <div class="content">
+                    <h3>
+                        <a href="">Ini Adalah Judul</a>
+                    </h3>
+                    <p class="blog-icon">
+                        <span><i class="fa-solid fa-user"></i>Rizal</span>
+                        <span><i class="fa-solid fa-calendar-days"></i>20 Januari 2023</span>
+                    </p>
+                    <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta doloremque odit, sunt modi error maiores. Consequatur voluptas cum impedit soluta tempora at quo non ratione. Voluptas quaerat quidem quasi deserunt!</p>
+                </div>
+            </div>
+            <div class="blog-card">
+                <a href="">
+                    <img src="./assets/img/img-thumbnail.jpg" alt="">
+                </a>
+                <div class="content">
+                    <h3>
+                        <a href="">Ini Adalah Judul</a>
+                    </h3>
+                    <p class="blog-icon">
+                        <span><i class="fa-solid fa-user"></i>Rizal</span>
+                        <span><i class="fa-solid fa-calendar-days"></i>25 Januari 2023</span>
+                    </p>
+                    <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta doloremque odit, sunt modi error maiores. Consequatur voluptas cum impedit soluta tempora at quo non ratione. Voluptas quaerat quidem quasi deserunt!</p>
+                </div>
+            </div>
+        </div>
+        <div class="btn">
+            <a href="blog.html">Selengkapnya</a>
+            
+        </div>
     </section>
+    <!-- Contack Section -->
+    <section class="contact" id="contact">
+        <h2>Kontak</h2>
+        <div class="contact-container">
+            <div class="contact-card">
+                <div class="icon">
+                    <i class="fa-solid fa-phone fa-4x"></i>
+                </div>
+                <div class="wrap">
+                    <h3>Phone</h3>
+                    <p>085784169696</p>
+                </div>
+            </div>
+            <div class="contact-card">
+                <div class="icon">
+                    <i class="fa-solid fa-envelope fa-4x"></i>
+                </div>
+                <div class="wrap">
+                    <h3>Phone</h3>
+                    <p>085784169696</p>
+                </div>
+            </div>
+            <div class="contact-card">
+                <div class="icon">
+                    <i class="fa-solid fa-location-dot fa-4x"></i>
+                </div>
+                <div class="wrap">
+                    <h3>Phone</h3>
+                    <p>085784169696</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; Rizal Hidayat 2023</p>
+        <div class="social">
+            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </footer>
 
 
-    <!-- Feather Icons -->
-    <script>
-        feather.replace()
-    </script>
+
 </body>
 </html>
