--- a/02-01/detail-blog.html
+++ b/02-01/detail-blog.html
@@ -76,7 +76,7 @@
     <footer>
         <p>&copy; Rizal Hidayat 2023</p>
         <div class="social">
-            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/rihid"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-brands fa-linkedin"></i></a>
             <a href=""><i class="fa-brands fa-twitter"></i></a>
         </div>
