--- a/07-01/index.html
+++ b/07-01/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
     <div class="content">
-        <h1 id="judul">Lorem ipsum dolor sit amet.</h1>
-        <h2 id="subjudul">Lorem ipsum, dolor sit amet consectetur adipisicing.</h2>
-    </div>
-    <div class="content">
-        <h1 id="judul2">Menghitung Semua</h1>
+        <h1>Menghitung Semua</h1>
         <ul id="angka">
             <li>30</li>
             <li>50</li>
@@ -20,7 +16,7 @@
             <li>90</li>
             <li>70</li>
         </ul>
-        <p>Hasilnya adalah <span id="sum"></span></p>
+        <p>Hasilnya adalah <span id="hasil"></span></p>
     </div>
     <script src="main.js"></script>
 </body>
