Menampilkan abular data

--- a/07-02/index.html
+++ b/07-02/index.html
@@ -24,12 +24,14 @@
                     <th>No</th>
                     <th>Nama</th>
                     <th>Nilai</th>
+                    <th>Nilai 2</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Ahmad Zamani</td>
+                    <td>80</td>
                     <td>80</td>
                 </tr>
                 <tr>
