Membuat tabel dari DOM dan menampilkan gambar dengan DOM

--- a/07-02/index.html
+++ b/07-02/index.html
@@ -24,14 +24,12 @@
                     <th>No</th>
                     <th>Nama</th>
                     <th>Nilai</th>
-                    <th>Nilai 2</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Ahmad Zamani</td>
-                    <td>80</td>
                     <td>80</td>
                 </tr>
                 <tr>
@@ -57,6 +55,12 @@
             </tbody>
         </table>
     </div>
-    <script src="./main.js"></script>
+    <div class="container">
+        <h1>Tabel Custom</h1>
+    </div>
+    <div class="image">
+        <h1>Gambar Saja</h1>
+    </div>
+    <script src="./main.js" defer></script>
 </body>
 </html>
