Update clear interval

--- a/07-03/tugas.html
+++ b/07-03/tugas.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <button id="btn">Mulai</button>
-        <span>...</span>
+        <span></span>
     </div>
     <script src="./script.js"></script>
 </body>
