--- a/09-02/all.html
+++ b/09-02/all.html
@@ -7,14 +7,12 @@
     <title>XHR dengan Axios</title>
 </head>
 <body>
-    <div class="content">
-        <!-- <h1></h1> -->
+    <div class="content-all">
+        <h1></h1>
         <p></p>
     </div>
     <hr>
-    <div class="comment">
-        
-    </div>
+
     <script src="./zepto.min.js"></script>
     <script src="./axios.min.js"></script>
     <script src="./index.js"></script>
