Update Fetch API

--- a/10-02/form.html
+++ b/10-02/form.html
@@ -55,6 +55,7 @@
 			<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 			  <a href="#" class="bg-white-900 text-gray hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">About</a>
 			  <a href="#" class="bg-white-900 text-gray hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Contact</a>
+			  <a href="#" class="bg-white-900 text-gray hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Contact</a>
 			  </div>
 			</div>
 		  </div>
