--- a/10-02/index.html
+++ b/10-02/index.html
@@ -54,7 +54,15 @@
 			</div>
 			<div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
 			  <a href="#" class="bg-white-900 text-gray hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">About</a>
-			  <a href="#" class="bg-white-900 text-gray hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">Contact</a>
+			  <button
+			  type="button"
+			  class="inline-block rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)]"
+			  data-te-toggle="modal"
+			  data-te-target="#tambahModal"
+			  data-te-ripple-init
+			  data-te-ripple-color="light">
+			  Large modal
+			</button>
 			  </div>
 			</div>
 		  </div>
@@ -67,10 +75,6 @@
 			<a href="#" class="bg-gray-900 text-white block rounded-md px-3 py-2 text-base font-medium" aria-current="page">Dashboard</a>
 	  
 			<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Team</a>
-	  
-			<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Projects</a>
-	  
-			<a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
 		  </div>
 		</div>
 	</nav>
@@ -89,6 +93,52 @@
             </p>
           </div>
     </div>
+	<!-- Modal Form -->
+	<div
+		data-te-modal-init
+		class="fixed top-0 left-0 z-[1055] hidden h-full w-full overflow-y-auto overflow-x-hidden outline-none"
+		id="tambahModal"
+		tabindex="-1"
+		aria-labelledby="exampleModalLgLabel"
+		aria-modal="true"
+		role="dialog">
+		<div
+			data-te-modal-dialog-ref
+			class="pointer-events-none relative w-auto translate-y-[-50px] opacity-0 transition-all duration-300 ease-in-out min-[576px]:mx-auto min-[576px]:mt-7 min-[576px]:max-w-[500px] min-[992px]:max-w-[800px]">
+			<div
+			class="pointer-events-auto relative flex w-full flex-col rounded-md border-none bg-white bg-clip-padding text-current shadow-lg outline-none dark:bg-neutral-600">
+			<div
+				class="flex flex-shrink-0 items-center justify-between rounded-t-md border-b-2 border-neutral-100 border-opacity-100 p-4 dark:border-opacity-50">
+				<h5
+				class="text-xl font-medium leading-normal text-neutral-800 dark:text-neutral-200"
+				id="exampleModalLgLabel">
+				Large modal
+				</h5>
+				<button
+				type="button"
+				class="box-content rounded-none border-none hover:no-underline hover:opacity-75 focus:opacity-100 focus:shadow-none focus:outline-none"
+				data-te-modal-dismiss
+				aria-label="Close">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					class="h-6 w-6">
+					<path
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					d="M6 18L18 6M6 6l12 12" />
+				</svg>
+				</button>
+			</div>
+			<div class="relative p-4">...</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- /Modal Form -->
 	<!--Container-->
 	<div class="container w-full md:max-w-3xl mx-auto pt-10">
 
