--- a/10-03/post.html
+++ b/10-03/post.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <div x-data="y" x-init="singleData = await y.init()">
+        <div x-data="y" x-init="singleData = await y.init()" class="single-post">
             <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
                 <div class="container position-relative px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
