--- a/10-03/index.html
+++ b/10-03/index.html
@@ -87,18 +87,14 @@
                                     </p>
                                     <!-- Collapse -->
                                     <p class="mt-0">
-                                        <a data-bs-toggle="collapse" href="#comments" role="button" aria-expanded="false" aria-controls="collapseExample">
+                                        <a data-bs-toggle="collapse" :href="`#comments${post.id}`" role="button" aria-expanded="false" aria-controls="collapseExample" @click="showComments(post.id)" id="spill">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
                                                 <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
                                               </svg>
                                         </a>
                                     </p>
                                 </div>
-                                <div class="collapse" id="comments">
-                                    <div class="card card-body border-bottom">
-                                        <h6 class="card-title">Card title</h6>
-                                        <p class="m-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
+                                <div class="collapse" :id="`comments${post.id}`">
                                 </div>
                                 <!-- /Collapse -->
                             </div>
@@ -142,7 +138,7 @@
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
-                      </form>
+                    </form>
                 </div>
                 </div>
             </div>
@@ -151,18 +147,36 @@
         <div class="modal fade" id="updateModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Form Update data</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="alert alert-info" role="alert" id="success-info" style="display:none;">
-                        Penambahan data sukses!
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Form Update data</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="alert alert-danger" role="alert" id="failed-info" style="display:none;">
-                        Penambahan data gagal!
+                    <div class="modal-body">
+                        <div class="alert alert-info" role="alert" id="success-info" style="display:none;">
+                            Penambahan data sukses!
+                        </div>
+                        <div class="alert alert-danger" role="alert" id="failed-info" style="display:none;">
+                            Penambahan data gagal!
+                        </div>
+                        <form id="post-form">
+                            <div class="mb-3">
+                              <label for="tags" class="form-label">Tags</label>
+                              <input type="text" class="form-control" id="tags" name="tags">
+                            </div>
+                            <div class="mb-3">
+                              <label for="title" class="form-label">Judul</label>
+                              <input type="text" class="form-control" id="title" name="title">
+                            </div>
+                            <div class="mb-3">
+                              <label for="body" class="form-label">Body</label>
+                              <input type="text" class="form-control" id="body" name="body">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                        </form>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
